2014-09-08 Fixed performance issue in Drawing addon
2014-09-08 Added enabling letters selection in Text Selection module
2014-09-05 Fixed deselecting text after completion of audio
2014-09-04 Fixed calculating page and lesson scores in PlayerUtils
2014-09-04 Writing Calculation: fixed error in console.log
2014-09-04 IWB Toolbar: now you can change tooltip text in css styles
2014-09-04 Fixed problem with model validation in Connection module
2014-09-03 Fixed IWB Toolbar position from the left side of the screen
2014-09-03 Fixed lesson loading image position
2014-09-03 Removed unexpected behavior when some one types in some characters from standard keyboard and then clicked on any button in eKeyboard module
2014-09-02 Added random order properties to Connection module
2014-09-02 Added responding to Show Answers events in Coloring, Connection, Text, Image Gap, Image Identification, Ordering and Text Selection
2014-09-02 Fixed initial scoring in Puzzle module
2014-09-02 Fixed initial scoring in Coloring module
2014-09-01 Added getFooterModule() method in Player API
2014-09-01 Added sending events in Magic Boxes module
2014-09-01 IWB Toolbar: fixed problem with module not working on Internet Explorer 11
2014-09-01 IWB Toolbar: now the position of toolbar in Player is the as in Editor
2014-09-01 Added adding CSS class to page when page score is 100%
2014-09-01 Added getHeaderModule() method to icPlayer API
2014-09-01 Added isAttempted() to Ordering module commands (previously was only as presenter API)
2014-08-29 Fixed issue with Drawing on IE 11
2014-08-29 Changed eKeyboard CustomLayout property, added new property Lock Standard Keyboard Input, added Special Characters for 3 languages
2014-08-29 Added new library Sonic.js
2014-08-29 Fixed getting score in Puzzle module
2014-08-28 Added commands for setting scoring values in Custom Scoring module
2014-08-28 Changed the parent for the masks in IWB Toolbar