@@ -103,6 +103,8 @@ function AddonColoring_create(){
         e.stopPropagation();
         e.preventDefault();
 
+        presenter.isColored = true;
+
         presenter.click = getMousePositionOnCanvas(e, isTouch);
 
         presenter.click.color = getClickedAreaColor(presenter.click.x, presenter.click.y);
@@ -543,12 +545,10 @@ function AddonColoring_create(){
         }
 
         var isAttempted = false;
-        $.each(presenter.configuration.areas, function() {
-            if (presenter.shouldBeTakenIntoConsideration(this)) {
-                isAttempted = true;
-                return false; // break;
-            }
-        });
+        if(presenter.isColored){
+            isAttempted = true;
+        }
+        
         return isAttempted;
     };
 
@@ -642,6 +642,7 @@ function AddonColoring_create(){
     presenter.reset = function(){
         presenter.clearCanvas();
         presenter.$view.find('.icon-container').remove();
+        presenter.isColored = false;
         presenter.isShowAnswersActive = false;
 
         presenter.configuration.isVisible = presenter.configuration.isVisibleByDefault;
@@ -752,6 +753,7 @@ function AddonColoring_create(){
             colorsThatCanBeFilled: presenter.configuration.colorsThatCanBeFilled,
             isVisible: presenter.configuration.isVisible,
             isDisabled: presenter.configuration.isDisabled,
+            isColored: presenter.isColored,
             score: presenter.getScore(),
             errorCount: presenter.getErrorCount()
         };
@@ -765,6 +767,7 @@ function AddonColoring_create(){
         presenter.configuration.isErase = parsed.isErase;
         presenter.configuration.isVisible = parsed.isVisible;
         presenter.configuration.isDisabled = parsed.isDisabled;
+        presenter.isColored = parsed.isColored;
         presenter.savedScore = parsed.score;
         presenter.savedErrorCount = parsed.errorCount;
 
